<resources>
  <string name="app_name">PersonalPass</string>

  <!-- ONBOARDING -->
  <string name="onboard_image_view_desc">Onboard image</string>
  <string name="onboard_title_first">Welcome to PersonalPass</string>
  <string name="onboard_title_second">Never forget again</string>
  <string name="onboard_title_third">Trusted and secure</string>
  <string name="onboard_msg_first">PersonalPass stores and syncs your passwords and personal data across all the devices in your life.</string>
  <string name="onboard_msg_second">You only need to remember one master password to access every website you use.</string>
  <string name="onboard_msg_third">Your vault is protected with world-class security. It\'s secure, not even we can access your passwords.</string>

  <!-- EMAIL FRAGMENT -->
  <string name="email_title">Let\'s get started!</string>
  <string name="email_label">Email address</string>

  <!-- PASSWORD FRAGMENT -->
  <string name="password_title">Now we\'ll create your master password</string>
  <string name="password_subtitle">Pick something you don\'t use elsewhere. You can\'t reset it, so make it memorable!</string>
  <string name="password_label">Master Password</string>
  <string name="password_length">At least 12 characters long</string>
  <string name="password_number">At least 1 number</string>
  <string name="password_lowercase">At least 1 lowercase letter</string>
  <string name="password_uppercase">At least 1 uppercase letter</string>
  <string name="password_email">Not your email</string>
  <string name="password_confirm_label">Confirm master password</string>
  <string name="password_hint_label">Password hint (optional)</string>

  <!-- FINISH FRAGMENT -->
  <string name="folder_vault_desc">Folder vault image</string>
  <string name="finish_title">Your vault is ready!</string>
  <string name="finish_text">Items you save in PersonalPass are stored safely in yout vault.</string>

  <!-- INDICATOR DESCRIPTION -->
  <string name="indicator_active_desc">Active registration page</string>
  <string name="indicator_inactive_desc">Inactive registration page</string>

  <!-- NAVIGATION -->
  <string name="all_items_item">All items</string>
  <string name="passwords_item">Passwords</string>
  <string name="addresses_item">Addresses</string>
  <string name="websites_item">Websites</string>
  <string name="notes_item">Notes</string>
  <string name="settings_item">Settings</string>
  <string name="openNavDrawer">Open navigation</string>
  <string name="closeNavDrawer">Close navigation</string>

  <!-- ITEMS FRAGMENT -->
  <string name="item_icon">Icon showing data type</string>

  <!-- BUTTONS -->
  <string name="create_account_btn">CREATE MY ACCOUNT</string>
  <string name="sign_in_btn">SING IN INSTEAD</string>
  <string name="password_button">SET PASSWORD</string>
  <string name="finish_button">GO TO YOUR VAULT.</string>
  <string name="login_button">LOG IN</string>
  <string name="register_button">CREATE ACCOUNT</string>

  <!-- ERROR MESSAGES -->
  <string name="email_required_msg">Email is required</string>
  <string name="email_pattern_msg">Email is not valid</string>
  <string name="email_in_use">Email is already in use</string>
  <string name="request_cancelled">Request has been canceled.</string>
  <string name="generic_error">An unknown error occurred. Please, try later.</string>
  <string name="connection_timeout">Could not establish connection. Please, try later.</string>
  <string name="read_timeout">Could not retrieve response from server. Please, try later.</string>
  <string name="passwords_not_equal">Passwords do not match.</string>
  <string name="password_hint_max_length">Hint can be at most 255 characters long.</string>
  <string name="password_required_msg">Password is required</string>
  <string name="missing_access_data">One of the required access data is missing. Please, try to login once again.</string>
</resources>