<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="50dp"
  android:paddingRight="50dp"
  android:background="@color/white_dark"
  android:animateLayoutChanges="true"
  tools:context=".fragments.PasswordFragment">

  <androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_weight="0.2"
      android:background="@drawable/ic_indicator_line_inactive"
      android:contentDescription="@string/indicator_inactive_desc" />

    <ImageView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_weight="0.2"
      android:background="@drawable/ic_indicator_line_active"
      android:contentDescription="@string/indicator_active_desc" />

    <ImageView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_weight="0.2"
      android:background="@drawable/ic_indicator_line_inactive"
      android:contentDescription="@string/indicator_inactive_desc" />

    <ImageView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_weight="0.2"
      android:background="@drawable/ic_indicator_line_inactive"
      android:contentDescription="@string/indicator_inactive_desc" />

  </androidx.appcompat.widget.LinearLayoutCompat>

  <TextView
    android:id="@+id/password_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:textSize="15sp"
    android:textStyle="bold"
    android:text="@string/password_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

  <TextView
    android:id="@+id/password_subtitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/password_subtitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password_title" />

  <androidx.constraintlayout.widget.Barrier
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="password_subtitle" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/password_label"
    android:textColorHint="@color/grey"
    app:boxBackgroundColor="@color/white_dark"
    app:boxStrokeColor="@color/grey"
    app:endIconMode="password_toggle"
    app:endIconTint="@color/grey"
    app:errorEnabled="true"
    app:errorTextColor="@color/red"
    app:hintTextColor="@color/red"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password_subtitle">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="3dp"
      android:inputType="textPassword"
      android:textColor="@color/black" />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:id="@+id/checkbox_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password_input_layout">

    <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/length_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="0dp"
      android:minWidth="0dp"
      android:enabled="false"
      android:text="@string/password_length"
      android:textColor="@color/black"
      app:useMaterialThemeColors="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/number_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="0dp"
      android:minWidth="0dp"
      android:enabled="false"
      android:text="@string/password_number"
      android:textColor="@color/black"
      app:useMaterialThemeColors="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/lowercase_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="0dp"
      android:minWidth="0dp"
      android:enabled="false"
      android:text="@string/password_lowercase"
      android:textColor="@color/black"
      app:useMaterialThemeColors="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/uppercase_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="0dp"
      android:minWidth="0dp"
      android:enabled="false"
      android:text="@string/password_uppercase"
      android:textColor="@color/black"
      app:useMaterialThemeColors="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/email_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="0dp"
      android:minWidth="0dp"
      android:enabled="false"
      android:text="@string/password_email"
      android:textColor="@color/black"
      app:useMaterialThemeColors="true" />
  </LinearLayout>

  <androidx.constraintlayout.widget.Barrier
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="bottom"
    app:barrierAllowsGoneWidgets="true"
    app:constraint_referenced_ids="checkbox_layout"/>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password_confirm_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_confirm_label"
    android:textColorHint="@color/grey"
    app:boxBackgroundColor="@color/white_dark"
    app:boxStrokeColor="@color/grey"
    app:endIconMode="password_toggle"
    app:endIconTint="@color/grey"
    app:errorEnabled="true"
    app:errorTextColor="@color/red"
    app:hintTextColor="@color/red"
    app:layout_constraintTop_toBottomOf="@+id/checkbox_layout"
    tools:layout_editor_absoluteX="50dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password_confirm_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:paddingBottom="3dp"
      android:textColor="@color/black" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password_hint_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_hint_label"
    android:textColorHint="@color/grey"
    app:boxBackgroundColor="@color/white_dark"
    app:boxStrokeColor="@color/grey"
    app:errorEnabled="true"
    app:errorTextColor="@color/red"
    app:hintTextColor="@color/red"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password_confirm_input_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password_hint_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:paddingBottom="3dp"
      android:textColor="@color/black" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/password_button"
    style="@style/Widget.MaterialComponents.Button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:backgroundTint="@color/red"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:text="@string/password_button"
    android:textColor="@color/white"
    android:textSize="15sp"
    app:cornerRadius="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password_hint_input_layout"
    app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>