<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="50dp"
  android:paddingRight="50dp"
  android:paddingTop="100dp"
  android:background="@color/white_dark"
  android:animateLayoutChanges="true"
  tools:context=".fragments.LoginFragment">

  <TextView
    android:id="@+id/login_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/anton"
    android:textAlignment="center"
    android:textSize="40sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.494"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/login_email_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:hint="@string/email_label"
    android:textColorHint="@color/grey"
    app:errorEnabled="true"
    app:errorTextColor="@color/red"
    app:hintTextColor="@color/red"
    app:boxBackgroundColor="@color/white_dark"
    app:boxStrokeColor="@color/grey"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_title">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/login_email_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="3dp"
      android:inputType="textEmailAddress"
      android:textColor="@color/black" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/login_password_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:hint="@string/password_label"
    android:textColorHint="@color/grey"
    app:errorEnabled="true"
    app:errorTextColor="@color/red"
    app:hintTextColor="@color/red"
    app:boxBackgroundColor="@color/white_dark"
    app:boxStrokeColor="@color/grey"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_email_input_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/login_password_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="3dp"
      android:inputType="textPassword"
      android:textColor="@color/black"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/login_button"
    style="@style/Widget.MaterialComponents.Button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:backgroundTint="@color/red"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:text="@string/login_button"
    android:textColor="@color/white"
    app:rippleColor="@color/white"
    app:cornerRadius="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_password_input_layout" />

  <com.google.android.material.button.MaterialButton
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:id="@+id/register_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:textSize="11sp"
    android:text="@string/register_button"
    android:textColor="@color/black"
    app:rippleColor="@color/grey"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>